--- a/style.css
+++ b/style.css
@@ -165,3 +165,9 @@ label {
     font-style: italic;
     font-size : 1.2em;
 }
+
+@media screen  and (max-width:700px){
+    table input,textarea {
+        width: 80%;
+    }
+}
