--- a/style.css
+++ b/style.css
@@ -5,6 +5,26 @@ body {
     background-color: hsl(336, 100%, 49%);
 
 }
+#show {
+    display:none;
+    padding:20px;
+    border-radius : 8px;
+    color:white;
+    text-align: center;
+    background-color: hsl(120, 60%, 43%);
+    z-index: 4;
+    position: fixed;
+    top:40px;
+    margin:auto;
+}
+
+#showDiv {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+
+}
 
 #heading {
     text-align: center;
